--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.38.1",
     "html5-qrcode": "^2.3.8",
     "next": "^15.1.6",
+    "onnxruntime-web": "^1.24.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
